external_libraries/gidpost/fortran_module/gidpost_interface.f90


    !SUBROUTINE GiD_OpenPostMeshFile -> REDEFINED
    !SUBROUTINE GiD_fOpenPostMeshFile -> REDEFINED
! ---
    SUBROUTINE GiD_ClosePostMeshFile() BIND(C,NAME='GiD_ClosePostMeshFile')
    END SUBROUTINE GiD_ClosePostMeshFile
    SUBROUTINE GiD_fClosePostMeshFile( fd ) BIND(C,NAME='GiD_fClosePostMeshFile')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fClosePostMeshFile
! ---
    !SUBROUTINE GiD_BeginMeshGroup -> REDEFINED
    !SUBROUTINE GiD_fBeginMeshGroup -> REDEFINED             
! ---
    SUBROUTINE GiD_EndMeshGroup() BIND(C,NAME='GiD_EndMeshGroup')
    END SUBROUTINE GiD_EndMeshGroup
    SUBROUTINE GiD_fEndMeshGroup(fd) BIND(C,NAME='GiD_fEndMeshGroup')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fEndMeshGroup
! ---
    !SUBROUTINE GiD_MeshUnit -> REDEFINED
    !SUBROUTINE GiD_fMeshUnit -> REDEFINED
! ---
    !SUBROUTINE GiD_BeginMesh -> REDEFINED
    !SUBROUTINE GiD_fBeginMesh -> REDEFINED
! ---
    !SUBROUTINE GiD_BeginMeshColor -> REDEFINED
    !SUBROUTINE GiD_fBeginMeshColor -> REDEFINED
! ---
    SUBROUTINE GiD_EndMesh() BIND(C,NAME='GiD_EndMesh')
    END SUBROUTINE GiD_EndMesh
    SUBROUTINE GiD_fEndMesh(fd) BIND(C,NAME='GiD_fEndMesh')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fEndMesh
! ---
    SUBROUTINE GiD_BeginCoordinates() BIND(C,NAME='GiD_BeginCoordinates')
    END SUBROUTINE GiD_BeginCoordinates
    SUBROUTINE GiD_fBeginCoordinates(fd) BIND(C,NAME='GiD_fBeginCoordinates')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fBeginCoordinates
! ---
    SUBROUTINE GiD_EndCoordinates() BIND(C,NAME='GiD_EndCoordinates')
    END SUBROUTINE GiD_EndCoordinates
    SUBROUTINE GiD_fEndCoordinates(fd) BIND(C,NAME='GiD_fEndCoordinates')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fEndCoordinates
! ---
    SUBROUTINE GiD_WriteCoordinates2D(id,x,y) BIND(C,NAME='GiD_WriteCoordinates2D')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x,y
    END SUBROUTINE GiD_WriteCoordinates2D
    SUBROUTINE GiD_fWriteCoordinates2D(fd,id,x,y) BIND(C,NAME='GiD_fWriteCoordinates2D')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x,y
    END SUBROUTINE GiD_fWriteCoordinates2D
! ---
    ! SUBROUTINE GiD_WriteCoordinates  -> SPECIAL INTERFACE
    ! SUBROUTINE GiD_fWriteCoordinates  -> SPECIAL INTERFACE
! ---
    SUBROUTINE GiD_BeginElements() BIND(C,NAME='GiD_BeginElements')
    END SUBROUTINE GiD_BeginElements
    SUBROUTINE GiD_fBeginElements(fd) BIND(C,NAME='GiD_fBeginElements')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fBeginElements
! ---
    SUBROUTINE GiD_EndElements() BIND(C,NAME='GiD_EndElements')
    END SUBROUTINE GiD_EndElements
    SUBROUTINE GiD_fEndElements(fd) BIND(C,NAME='GiD_fEndElements')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fEndElements
! ---
    SUBROUTINE GiD_WriteElement(id,conec) BIND(C,NAME='GiD_WriteElement')
      IMPORT :: C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      INTEGER(C_INT),        INTENT(IN) :: conec(*)
    END SUBROUTINE GiD_WriteElement
    SUBROUTINE GiD_fWriteElement(fd,id,conec) BIND(C,NAME='GiD_fWriteElement')
      IMPORT :: C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      INTEGER(C_INT),        INTENT(IN) :: conec(*)
    END SUBROUTINE GiD_fWriteElement
! ---
    !SUBROUTINE GiD_WriteElementMat(id,conec) -> SPECIAL INTERFACE
    !SUBROUTINE GiD_fWriteElementMat(id,conec) -> SPECIAL INTERFACE
! ---
    SUBROUTINE GiD_WriteCircle(id,conec,radius,normal_x,normal_y,normal_z) BIND(C,NAME='GiD_WriteCircle')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      INTEGER(C_INT), VALUE, INTENT(IN) :: conec
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: radius
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: normal_x, normal_y, normal_z
    END SUBROUTINE GiD_WriteCircle
    SUBROUTINE GiD_fWriteCircle(fd,id,conec,radius,normal_x,normal_y,normal_z) BIND(C,NAME='GiD_fWriteCircle')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      INTEGER(C_INT), VALUE, INTENT(IN) :: conec
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: radius
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: normal_x, normal_y, normal_z
    END SUBROUTINE GiD_fWriteCircle
! ---
    SUBROUTINE GiD_WriteCircleMat(id,conec,radius,normal_x,normal_y,normal_z,material) BIND(C,NAME='GiD_WriteCircleMat')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      INTEGER(C_INT), VALUE, INTENT(IN) :: conec
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: radius
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: normal_x, normal_y, normal_z
      INTEGER(C_INT), VALUE, INTENT(IN) :: material
    END SUBROUTINE GiD_WriteCircleMat
    SUBROUTINE GiD_fWriteCircleMat(fd,id,conec,radius,normal_x,normal_y,normal_z,material) BIND(C,NAME='GiD_fWriteCircleMat')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      INTEGER(C_INT), VALUE, INTENT(IN) :: conec
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: radius
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: normal_x, normal_y, normal_z
      INTEGER(C_INT), VALUE, INTENT(IN) :: material
    END SUBROUTINE GiD_fWriteCircleMat
! ---
    SUBROUTINE GiD_WriteSphere(id,conec,radius) BIND(C,NAME='GiD_WriteSphere')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      INTEGER(C_INT), VALUE, INTENT(IN) :: conec
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: radius
    END SUBROUTINE GiD_WriteSphere
    SUBROUTINE GiD_fWriteSphere(fd,id,conec,radius) BIND(C,NAME='GiD_fWriteSphere')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      INTEGER(C_INT), VALUE, INTENT(IN) :: conec
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: radius
    END SUBROUTINE GiD_fWriteSphere
! ---
    SUBROUTINE GiD_WriteSphereMat(id,conec,radius,material) BIND(C,NAME='GiD_WriteSphereMat')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      INTEGER(C_INT), VALUE, INTENT(IN) :: conec
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: radius
      INTEGER(C_INT), VALUE, INTENT(IN) :: material
    END SUBROUTINE GiD_WriteSphereMat
    SUBROUTINE GiD_fWriteSphereMat(fd,id,conec,radius,material) BIND(C,NAME='GiD_fWriteSphereMat')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      INTEGER(C_INT), VALUE, INTENT(IN) :: conec
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: radius
      INTEGER(C_INT), VALUE, INTENT(IN) :: material
    END SUBROUTINE GiD_fWriteSphereMat

!--------------------------------------------------------------------------
! RESULTS ROUTINES
!--------------------------------------------------------------------------

    !SUBROUTINE GiD_OpenPostResultFile -> REDEFINED
    !SUBROUTINE GiD_fOpenPostResultFile -> REDEFINED

    SUBROUTINE GiD_ClosePostResultFile() BIND(C,NAME='GiD_ClosePostResultFile')
    END SUBROUTINE GiD_ClosePostResultFile
    SUBROUTINE GiD_fClosePostResultFile(fd) BIND(C,NAME='GiD_fClosePostResultFile')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fClosePostResultFile

    !SUBROUTINE GiD_BeginGaussPoint -> REDEFINED
    !SUBROUTINE GiD_fBeginGaussPoint -> REDEFINED

    SUBROUTINE GiD_EndGaussPoint() BIND(C,NAME='GiD_EndGaussPoint')
    END SUBROUTINE GiD_EndGaussPoint
    SUBROUTINE GiD_fEndGaussPoint(fd) BIND(C,NAME='GiD_fEndGaussPoint')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fEndGaussPoint

    SUBROUTINE GiD_WriteGaussPoint2D(x,y) BIND(C,NAME='GiD_WriteGaussPoint2D')
      IMPORT :: C_DOUBLE
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x,y
    END SUBROUTINE GiD_WriteGaussPoint2D
    SUBROUTINE GiD_fWriteGaussPoint2D(fd,x,y) BIND(C,NAME='GiD_fWriteGaussPoint2D')
      IMPORT :: C_DOUBLE, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x,y
    END SUBROUTINE GiD_fWriteGaussPoint2D

    SUBROUTINE GiD_WriteGaussPoint3D(x,y,z) BIND(C,NAME='GiD_WriteGaussPoint3D')
      IMPORT :: C_DOUBLE
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x,y,z
    END SUBROUTINE GiD_WriteGaussPoint3D
    SUBROUTINE GiD_fWriteGaussPoint3D(fd,x,y,z) BIND(C,NAME='GiD_fWriteGaussPoint3D')
      IMPORT :: C_DOUBLE, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x,y,z
    END SUBROUTINE GiD_fWriteGaussPoint3D

    !SUBROUTINE GiD_BeginRangeTable -> REDEFINED
    !SUBROUTINE GiD_fBeginRangeTable -> REDEFINED

    SUBROUTINE GiD_EndRangeTable() BIND(C,NAME='GiD_EndRangeTable')
    END SUBROUTINE GiD_EndRangeTable
    SUBROUTINE GiD_fEndRangeTable(fd) BIND(C,NAME='GiD_fEndRangeTable')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fEndRangeTable

    !SUBROUTINE GiD_WriteMinRange -> REDEFINED
    !SUBROUTINE GiD_fWriteMinRange -> REDEFINED

    !SUBROUTINE GiD_WriteRange -> REDEFINED
    !SUBROUTINE GiD_fWriteRange -> REDEFINED

    !SUBROUTINE GiD_WriteMaxRange -> REDEFINED
    !SUBROUTINE GiD_fWriteMaxRange -> REDEFINED

    !SUBROUTINE GiD_BeginScalarResult -> REDEFINED
    !SUBROUTINE GiD_fBeginScalarResult -> REDEFINED

    !SUBROUTINE GiD_BeginVectorResult -> REDEFINED
    !SUBROUTINE GiD_fBeginVectorResult -> REDEFINED

    !SUBROUTINE GiD_Begin2DMatResult -> REDEFINED
    !SUBROUTINE GiD_fBegin2DMatResult -> REDEFINED

    !SUBROUTINE GiD_Begin3DMatResult -> REDEFINED
    !SUBROUTINE GiD_fBegin3DMatResult -> REDEFINED

    !SUBROUTINE GiD_BeginPDMMatResult -> REDEFINED
    !SUBROUTINE GiD_fBeginPDMMatResult -> REDEFINED

    !SUBROUTINE GiD_BeginMainMatResult -> REDEFINED
    !SUBROUTINE GiD_fBeginMainMatResult -> REDEFINED

    !SUBROUTINE GiD_BeginLAResult -> REDEFINED
    !SUBROUTINE GiD_fBeginLAResult -> REDEFINED
    
    !SUBROUTINE GiD_BeginComplexScalarResult -> REDEFINED
    !SUBROUTINE GiD_fBeginComplexScalarResult -> REDEFINED
    
    !SUBROUTINE GiD_BeginComplexVectorResult -> REDEFINED
    !SUBROUTINE GiD_fBeginComplexVectorResult -> REDEFINED

    !SUBROUTINE GiD_BeginResultHeader -> REDEFINED
    !SUBROUTINE GiD_fBeginResultHeader -> REDEFINED

    !SUBROUTINE GiD_ScalarComp -> REDEFINED
    !SUBROUTINE GiD_fScalarComp -> REDEFINED

    !SUBROUTINE GiD_VectorComp -> REDEFINED
    !SUBROUTINE GiD_fVectorComp -> REDEFINED

    !SUBROUTINE GiD_2DMatrixComp -> REDEFINED
    !SUBROUTINE GiD_f2DMatrixComp -> REDEFINED

    !SUBROUTINE GiD_3DMatrixComp -> REDEFINED
    !SUBROUTINE GiD_f3DMatrixComp -> REDEFINED

    !SUBROUTINE GiD_PDMComp -> REDEFINED
    !SUBROUTINE GiD_fPDMComp -> REDEFINED

    !SUBROUTINE GiD_MainMatrixComp -> REDEFINED
    !SUBROUTINE GiD_fMainMatrixComp -> REDEFINED

    !SUBROUTINE GiD_LAComponents -> REDEFINED
    !SUBROUTINE GiD_fLAComponents -> REDEFINED
    
    !SUBROUTINE GiD_ComplexScalarComp -> REDEFINED
    !SUBROUTINE GiD_fComplexScalarComp -> REDEFINED
    
    !SUBROUTINE GiD_ResultUnit -> REDEFINED
    !SUBROUTINE GiD_fResultUnit -> REDEFINED

    !SUBROUTINE GiD_BeginResultGroup -> REDEFINED
    !SUBROUTINE GiD_fBeginResultGroup -> REDEFINED

    !SUBROUTINE GiD_ResultDescriptor -> REDEFINED
    !SUBROUTINE GiD_fResultDescriptor -> REDEFINED
